# perplexity-web-api

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  compose.yaml
crates/perplexity-api-server/: Cargo.toml  README.md
crates/perplexity-api-server/src/: app.rs  auth.rs  config.rs  error.rs  main.rs  service.rs  state.rs  telemetry.rs
crates/perplexity-api-server/src/api/: model.rs  request.rs  response.rs
crates/perplexity-api-server/src/http/: health.rs  logging.rs  mod.rs  request.rs  response.rs  router.rs
crates/perplexity-api-server/src/http/v1/: attachments.rs  images.rs  mod.rs  models.rs  search.rs  stream.rs
crates/perplexity-web-api-server/: Cargo.toml
crates/perplexity-web-api-server/src/: error.rs  lib.rs  main.rs  service.rs  shutdown.rs  telemetry.rs
crates/perplexity-web-api-server/src/api/: request.rs  response.rs
crates/perplexity-web-api-server/src/http/: mod.rs  router.rs
crates/perplexity-web-api-server/src/http/v1/: models.rs  search.rs
crates/perplexity-web-client/: Cargo.toml  README.md
crates/perplexity-web-client/src/: auth.rs  client.rs  config.rs  error.rs  lib.rs  model.rs  parse.rs  request.rs  response.rs  session.rs  sse.rs  upload.rs
