[package]
name = "perplexity-web-client"
description = "Async Rust client for the Perplexity AI Web API"
version = "0.1.0"
publish = false
edition = { workspace = true }

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true }
memchr = { workspace = true }
regex = { workspace = true }
pin-project-lite = { workspace = true }
rquest = { workspace = true }
rquest-util = { workspace = true }
